-Video call strean resolution fixes. -Chat popup fixes. -Chat overflow fixes

--- a/src/app/component/chat/chat.component.scss
+++ b/src/app/component/chat/chat.component.scss
@@ -74,7 +74,7 @@
         line-height: 150%;
         color: #1B163A;
         margin: 4px 0px;
-        overflow: auto;
+        word-wrap: break-word;
         flex-shrink: 0;
       }
 
@@ -154,5 +154,3 @@
   background-color: white;
   cursor: pointer;
 }
-
-
